tag overflow fixed

--- a/css/blog.css
+++ b/css/blog.css
@@ -237,6 +237,10 @@ body{
   padding-top: 0.5rem;
 }
 
+.card .card-body .card-text{
+  overflow: hidden;
+}
+
 .card-body .card-text mark{
 	border-radius: 10%;
 	padding: 2px 5px;
@@ -246,8 +250,7 @@ body{
 }
 
 .card a{
-  position: absolute;
-  bottom: 10px;
+  position: relative;
   background: #0f0c29;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
